syntax = "proto3";

package elkm1grpc;

service ElkGRPC {
    rpc ArmStay (ArmArgs) returns (ArmingStatusArea) {
    }
    rpc ArmAway (ArmArgs) returns (ArmingStatusArea) {
    }
    rpc Disarm (ArmArgs) returns (ArmingStatusArea) {
    }
    rpc ArmingStatus (ArmingStatusArgs) returns (ArmingStatusReport) {
    }
    rpc ZoneStatus (ZoneStatusArgs) returns (ZoneStatusReport) {
    }
    rpc ArmingStatusChange (ArmingChangeArgs) returns (stream ArmingStatusReport);
    rpc ZoneChange (ZoneChangeArgs) returns (stream Zone);
}
message ZoneStatusArgs {

}
message ZoneStatusReport {
    repeated Zone zones = 1;
}
message ArmingStatusArgs {
}
message ZoneChangeArgs {
}
message ArmingChangeArgs {
}

message ArmingStatusReport {
    repeated ArmingStatusArea areas = 1;
}

message ArmingStatusArea {
    int32 area = 1;
    ArmingStatus arming_status = 2;
    ArmUpState arm_up_state = 3;
    AlarmState alarm_state = 4;

    enum ArmingStatus {
        UNKNOWN_ARMING_STATUS = 0;
        DISARMED = 1;
        ARMED_AWAY = 2;
        ARMED_STAY = 3;
        ARMED_STAY_INSTANT = 4;
        ARMED_TO_NIGHT = 5;
        ARMED_TO_NIGHT_INSTANT = 6;
        ARMED_TO_VACATION = 7;
        ARM_STEP_TO_NEXT_AWAY_MODE = 8;
        ARM_STEP_TO_NEXT_STAY_MODE = 9;
        FORCE_AWAY = 10;
        FORCE_STAY = 11;
    }
    enum ArmUpState {
        UNKNOWN_ARM_UP_STATE = 0;
        NOT_READY = 1;
        READY = 2;
        READY_FORCE = 3;
        ARMED_EXIT_TIMER = 4;
        ARMED = 5;
        FORCE_ARMED = 6;
        ARMED_BYPASS = 7;
    }
    enum AlarmState {
        UNKNOWN = 0;
        NO_ALARM = 1;
        ENTRANCE_DELAY = 2;
        ABORT_DELAY = 3;
        ALARM_FIRE = 4;
        ALARM_MEDICAL = 5;
        ALARM_POLICE = 6;
        ALARM_BURGLAR = 7;
        ALARM_AUX1 = 8;
        ALARM_AUX2 = 9;
        ALARM_AUX3 = 10;
        ALARM_AUX4 = 11;
        ALARM_CARBON_MONOXIDE = 12;
        ALARM_EMERGENCY = 13;
        ALARM_FREEZE = 14;
        ALARM_GAS = 15;
        ALARM_HEAT = 16;
        ALARM_WATER = 17;
        ALARM_FIRE_SUPERVISORY = 18;
        ALARM_FIRE_VERIFY = 19;
    }
}
message ArmArgs {
    int32 area = 1;
    int32 pin = 2;
}

message Zone {
    int32 zone = 1;
    string description = 2;
    ZoneStatus status = 3;
    ZoneSubStatus sub_status = 4;

    enum ZoneStatus {
        NORMAL = 0;
        TROUBLE = 1;
        VIOLATED = 2;
        BYPASSED = 3;
    }
    enum ZoneSubStatus {
        UNCONFIGURED = 0;
        OPEN = 1;
        EOL = 2;
        SHORT = 3;
    }
}